Setting up the main page

--- a/frontend/templates/includes/header.html
+++ b/frontend/templates/includes/header.html
@@ -1,1 +1,6 @@
-
+<header>
+    <nav>
+        <h1>Планирование работ</h1>
+        <a href="{% url 'schedule_list' %}">Главная</a>
+    </nav>
+</header>
