Added a page for the user

--- a/frontend/templates/includes/header.html
+++ b/frontend/templates/includes/header.html
@@ -2,5 +2,6 @@
     <nav>
         <h1>Планирование работ</h1>
         <a href="{% url 'schedule_list' %}">Главная</a>
+        <a href="{% url 'profile' %}">Профиль</a>
     </nav>
 </header>
