--- a/frontend/templates/users/profile.html
+++ b/frontend/templates/users/profile.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Профиль{% endblock %}
+
+{% block content %}
+    <h2>Профиль</h2>
+    <p>Имя: {{ user.first_name }}</p>
+    <p>Фамилия: {{ user.last_name }}</p>
+    <p>Адрес эл.почты {{ user.email }}</p>
+{% endblock %}
