--- a/frontend/templates/includes/header.html
+++ b/frontend/templates/includes/header.html
@@ -2,6 +2,12 @@
     <nav>
         <h1>Планирование работ</h1>
         <a href="{% url 'schedule_list' %}">Главная</a>
-        <a href="{% url 'profile' %}">Профиль</a>
+        {% if user.is_authenticated %}
+            <a href="{% url 'profile' %}">Профиль</a>
+            <a href="{% url 'logout' %}">Выйти</a>
+        {% else %}
+            <a href="{% url 'login' %}">Войти</a>
+            <a href="{% url 'signup' %}">Зарегистрироваться</a>
+        {% endif %}
     </nav>
 </header>
