--- a/frontend/templates/users/profile.html
+++ b/frontend/templates/users/profile.html
@@ -4,7 +4,9 @@
 
 {% block content %}
     <h2>Профиль</h2>
+    <p>Пользователь: {{ user.username }}</p>
     <p>Имя: {{ user.first_name }}</p>
     <p>Фамилия: {{ user.last_name }}</p>
     <p>Адрес эл.почты {{ user.email }}</p>
+    <a href="{% url 'edit_profile' %}">Изменить профиль</a>
 {% endblock %}
