--- a/frontend/templates/schedules/schedule_form.html
+++ b/frontend/templates/schedules/schedule_form.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Работа с графиками{% endblock %}
+
+{% block content %}
+    <h2>{% if form.instance.pk %}Редактировать{% else %}Создать{% endif %} график</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Сохранить</button>
+    </form>
+{% endblock %}
