--- a/frontend/templates/includes/header.html
+++ b/frontend/templates/includes/header.html
@@ -1,13 +1,16 @@
 <header>
     <nav>
         <h1>Планирование работ</h1>
-        <a href="{% url 'schedule_list' %}">Главная</a>
-        {% if user.is_authenticated %}
-            <a href="{% url 'profile' %}">Профиль</a>
-            <a href="{% url 'logout' %}">Выйти</a>
-        {% else %}
-            <a href="{% url 'login' %}">Войти</a>
-            <a href="{% url 'signup' %}">Зарегистрироваться</a>
-        {% endif %}
+        <h2></h2>
+        <div class="button-container">
+            <a href="{% url 'schedule_list' %}" class="button">Главная</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'profile' %}" class="button">Профиль</a>
+                <a href="{% url 'logout' %}" class="button">Выйти</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="button">Войти</a>
+                <a href="{% url 'signup' %}" class="button">Зарегистрироваться</a>
+            {% endif %}
+        </div>
     </nav>
 </header>
