--- a/frontend/templates/schedules/schedule_list.html
+++ b/frontend/templates/schedules/schedule_list.html
@@ -3,7 +3,11 @@
 {% block title %}Графики{% endblock %}
 
 {% block content %}
+{% load static %}
     <h2>Перечень графиков</h2>
+    {% if user.is_authenticated %}
+        <a href="{% url 'schedule_create' %}">Добавить график</a>
+    {% endif %}
     <ul>
         {% for schedule in schedules %}
             <li>
@@ -11,6 +15,14 @@
                 <p>{{ schedule.description }}</p>
                 <p>Автор: {{ schedule.author.username }}</p>
                 <p>Последние изменения: {{ schedule.last_modified }}</p>
+                <a href="{% url 'schedules:schedule_detail' schedule.pk %}">Просмотр</a>
+                {% if user == schedule.author %}
+                    <a href="{% url 'schedules:schedule_edit' schedule.pk %}">Редактировать</a>
+                    <form action="{% url 'schedules:schedule_delete' schedule.pk %}" method="post" style="display:inline">
+                        {% csrf_token %}
+                        <button type="submit">Удалить</button>
+                    </form>
+                {% endif %}
             </li>
         {% endfor %}
     </ul>
