--- a/frontend/templates/includes/footer.html
+++ b/frontend/templates/includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>&copy; {{ current_year }} Планирование работ</p>
+    <p>Copyright &copy; {{ year }} <span style="color:#DCDCDC"> «Планирование работ»</span></p>
 </footer>
