Changing templates for a new model structure

--- a/frontend/templates/schedules/schedule_confirm_delete.html
+++ b/frontend/templates/schedules/schedule_confirm_delete.html
@@ -9,6 +9,6 @@
     <form method="post">
         {% csrf_token %}
         <button type="submit">Подтвердить</button>
-        <a href="{% url 'schedule_detail' schedule.pk %}">Отмена</a>
+        <a href="{% url 'schedules:schedule_detail' schedule.pk %}">Отмена</a>
     </form>
 {% endblock %}
