--- a/frontend/templates/schedules/schedule_detail.html
+++ b/frontend/templates/schedules/schedule_detail.html
@@ -16,6 +16,9 @@
                 <th>Наименование</th>
                 <th>Дата начала</th>
                 <th>Дата окончания</th>
+                <th>Наименование ресурса</th>
+                <th>Количество</th>
+                <th>Единицы измерения</th>
             </tr>
         </thead>
         <tbody>
@@ -25,12 +28,15 @@
                     <td>{{ work.name }}</td>
                     <td>{{ work.start_date }}</td>
                     <td>{{ work.end_date }}</td>
+                    <td>{{ work.resource_name }}</td>
+                    <td>{{ work.resource_quantity }}</td>
+                    <td>{{ work.resource_unit }}</td>
                 </tr>
             {% endfor %}
         </tbody>
     </table>
 
     {% if user == schedule.author %}
-        <a href="{% url 'schedule_edit' schedule.pk %}">Редактировать график</a>
+        <a href="{% url 'schedules:schedule_edit' schedule.pk %}">Редактировать график</a>
     {% endif %}
 {% endblock %}
