--- a/frontend/templates/schedules/schedule_list.html
+++ b/frontend/templates/schedules/schedule_list.html
@@ -6,7 +6,7 @@
 {% load static %}
     <h2>Перечень графиков</h2>
     {% if user.is_authenticated %}
-        <a href="{% url 'schedule:schedule_create' %}">Добавить график</a>
+        <a href="{% url 'schedules:schedule_create' %}" class="button">Добавить график</a>
     {% endif %}
     <ul>
         {% for schedule in schedules %}
@@ -15,12 +15,12 @@
                 <p>{{ schedule.description }}</p>
                 <p>Автор: {{ schedule.author.username }}</p>
                 <p>Последние изменения: {{ schedule.last_modified }}</p>
-                <a href="{% url 'schedules:schedule_detail' schedule.pk %}">Просмотр</a>
+                <a href="{% url 'schedules:schedule_detail' schedule.pk %}" class="button">Просмотр</a>
                 {% if user == schedule.author %}
-                    <a href="{% url 'schedules:schedule_edit' schedule.pk %}">Редактировать</a>
+                    <a href="{% url 'schedules:schedule_edit' schedule.pk %}" class="button">Редактировать</a>
                     <form action="{% url 'schedules:schedule_delete' schedule.pk %}" method="post" style="display:inline">
                         {% csrf_token %}
-                        <button type="submit">Удалить</button>
+                        <button type="submit" class="button">Удалить</button>
                     </form>
                 {% endif %}
             </li>
