--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -18,7 +18,7 @@ header {
     margin: 5px;
     font-size: 16px;
     color: #fff;
-    background-color: #2F4F4F; /* Оранжевый основной цвет */
+    background-color: #2F4F4F; /* Основной цвет */
     text-align: center;
     text-decoration: none;
     border-radius: 4px;
@@ -27,11 +27,11 @@ header {
 }
 
 .button:hover {
-    background-color: #008080; /* Оранжевый светлый при наведении */
+    background-color: #008080; /* Светлый при наведении */
 }
 
 .button:active {
-    background-color: #5F9EA0; /* Оранжевый темный при нажатии */
+    background-color: #5F9EA0; /* Темный при нажатии */
 }
 
 button.button {
