--- a/frontend/templates/users/edit_profile.html
+++ b/frontend/templates/users/edit_profile.html
@@ -7,6 +7,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Сохранить</button>
+        <button type="submit" class="button">Сохранить</button>
     </form>
 {% endblock %}
