--- a/frontend/templates/schedules/schedule_form.html
+++ b/frontend/templates/schedules/schedule_form.html
@@ -6,15 +6,18 @@
     <h2>{% if form.instance.pk %}Редактировать{% else %}Создать{% endif %} график</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        {{ formset.management_form }}
-        {% for form in formset %}
-            {{ form.as_p }}
-            {% if form.instance.pk %}
-                <p><a href="{% url 'schedules:work_delete' form.instance.pk %}">Удалить работу</a></p>
-            {% endif %}
-        {% endfor %}
-        <button type="submit">Сохранить</button>
-        <a href="{% url 'schedules:schedule_list' %}">Отмена</a>
+        <ul>
+            {{ form.as_ul }}
+            {{ formset.management_form }}
+            {% for form in formset %}
+                {{ form.as_ul }}
+                {% if form.instance.pk %}
+                <a href="{% url 'schedules:work_delete' form.instance.pk %}"
+                      class="button">Удалить работу</a>
+                {% endif %}
+            {% endfor %}
+        </ul>
+        <button type="submit" class="button">Сохранить</button>
+        <a href="{% url 'schedules:schedule_list' %}" class="button">Отмена</a>
     </form>
 {% endblock %}
