--- a/frontend/templates/users/signup.html
+++ b/frontend/templates/users/signup.html
@@ -7,6 +7,6 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Зарегистрироваться</button>
+        <button type="submit" class="button">Зарегистрироваться</button>
     </form>
 {% endblock %}
