--- a/frontend/templates/schedules/schedule_form.html
+++ b/frontend/templates/schedules/schedule_form.html
@@ -10,14 +10,33 @@
             {{ form.as_ul }}
             {{ formset.management_form }}
             {% for form in formset %}
-                {{ form.as_ul }}
-                {% if form.instance.pk %}
-                <a href="{% url 'schedules:work_delete' form.instance.pk %}"
-                   class="button">Удалить работу</a>
-                {% endif %}
+                <li class="work-form">
+                    {{ form.as_ul }}
+                    {% if form.instance.pk %}
+                        <a href="{% url 'schedules:work_delete' form.instance.pk %}"
+                           class="button-delete-work">Удалить работу</a>
+                    {% endif %}
+                    <div class="resource-formset">
+                        {{ form.resource_formset.management_form }}
+                        {% for resource_form in form.resource_formset %}
+                            <ul>
+                                {{ resource_form.as_ul }}
+                                {% if resource_form.instance.pk %}
+                                    <a href="{% url 'schedules:resource_delete' resource_form.instance.pk %}"
+                                       class="button delete-resource">Удалить ресурс</a>
+                                {% endif %}
+                            </ul>
+                        {% endfor %}
+                    </div>
+                    <button type="button" class="button add-resuorce">Добавить ресурс</button>
+                </li>
             {% endfor %}
         </ul>
+        <button type="button" class="button add-work">Добавить работу</button>
         <button type="submit" class="button">Сохранить</button>
         <a href="{% url 'schedules:schedule_list' %}" class="button">Отмена</a>
     </form>
+<!--
+    <script src="{% static 'js/schedule_form.js' %}"></script>
+-->
 {% endblock %}
