--- a/frontend/templates/users/edit_profile.html
+++ b/frontend/templates/users/edit_profile.html
@@ -8,5 +8,7 @@
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="button">Сохранить</button>
+        <a href="{% url 'schedules:schedule_list' %}"
+           class="button">Отмена</a>
     </form>
 {% endblock %}
