--- a/frontend/templates/schedules/schedule_confirm_delete.html
+++ b/frontend/templates/schedules/schedule_confirm_delete.html
@@ -3,12 +3,12 @@
 {% block title %}Подтверждение удаления{% endblock %}
 
 {% block content %}
-    <h2>Вы уверены, что хотите удалить этот график?</h2>
-    <p>Название: {{ schedule.title }}</p>
-    <p>Описание: {{ schedule.description }}</p>
+    <h2>Удалить график "{{ schedule.title }}"?</h2>
+    <p>Вы уверены, что хотите удалить этот график? Это действие необратимо.</p>
     <form method="post">
         {% csrf_token %}
-        <button type="submit">Подтвердить</button>
-        <a href="{% url 'schedules:schedule_detail' schedule.pk %}">Отмена</a>
+        <button type="submit" class="button">Удалить</button>
+        <a href="{% url 'schedules:schedule_detail' pk=schedule.pk %}"
+           class="button">Отмена</a>
     </form>
 {% endblock %}
