--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -53,7 +53,7 @@ footer {
     background-color: #5F9EA0; /* Темный при нажатии */
 }
 
-button.button {
+.button.delete {
     padding: 10px 20px;
     margin: 5px;
     font-size: 16px;
@@ -66,14 +66,13 @@ button.button {
     cursor: pointer;
 }
 
-button.button:hover {
+.button.delete:hover {
     background-color: #c82333; /* Красный светлый при наведении */
 }
 
-button.button:active {
+.button.delete:active {
     background-color: #bd2130; /* Красный темный при нажатии */
 }
-
 
 header h1 {
     margin: 0;
