--- a/frontend/templates/schedules/resource_form.html
+++ b/frontend/templates/schedules/resource_form.html
@@ -7,7 +7,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="button">Сохранить</button>
+        <button type="submit" class="button delete">Сохранить</button>
         <a href="{% url 'schedules:work_update' pk=work_pk %}" class="button">Отмена</a>
     </form>
 {% endblock %}
