--- a/frontend/templates/schedules/schedule_confirm_delete.html
+++ b/frontend/templates/schedules/schedule_confirm_delete.html
@@ -7,7 +7,7 @@
     <p>Вы уверены, что хотите удалить этот график? Это действие необратимо.</p>
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="button">Удалить</button>
+        <button type="submit" class="button delete">Удалить</button>
         <a href="{% url 'schedules:schedule_detail' pk=schedule.pk %}"
            class="button">Отмена</a>
     </form>
