--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #FAF0E6;
+    /* background-image: url(background.jpeg) */
 }
 
 header {
