--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -9,7 +9,7 @@ body {
     background-image: url('../images/background.jpeg');
     background-size: cover; /* Масштабирование изображения на весь экран */
     background-position: center; /* Позиционирование изображения по центру */
-    background-repeat: no-repeat; /* Запрет повтора фонового изображения */
+    background-repeat: no-repeat; /* Запрет повтора фонового изображения  */
 }
 
 header {
@@ -22,7 +22,8 @@ header {
 main {
     flex: 1;
     padding: 20px;
-    max-width: 800px;
+    width: 100%;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -105,4 +106,49 @@ table, th, td {
 
 th {
     background: #f2f2f2;
+}
+
+/* Стили для страницы с графиками */
+.schedule-list {
+    display: flex;
+    flex-wrap: wrap; /* Разрешаем перенос элементов на новую строку */
+    gap: 20px; /* Расстояние между элементами */
+    justify-content: flex-start; /* Выравнивание элементов */
+    padding: 20px;
+}
+
+.schedule-item {
+    flex: 1 1 calc(33.33% - 40px); /* Занимаем одну треть от ширины контейнера с учетом отступов */
+    background: rgba(255, 255, 255, 0.8); /* Прозрачный фон для контейнера */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Тень для контейнера */
+    box-sizing: border-box; /* Учитываем padding и border в ширине и высоте элемента */
+    max-width: 600px;  /* Максимальная ширина контейнера */
+    margin-bottom: 10px;  /* Расстояние между блоками с графиками */
+}
+
+.schedule-item h2 {
+    margin-top: 0;
+}
+
+.schedule-item p {
+    margin-bottom: 10px;
+}
+
+.schedule-item .button {
+    margin-right: 10px;
+}
+
+/* Адаптивный дизайн */
+@media (max-width: 1200px) {
+    .schedule-item {
+        flex: 1 1 calc(50% - 40px); /* Две колонки при ширине экрана меньше 1200px */
+    }
+}
+
+@media (max-width: 768px) {
+    .schedule-item {
+        flex: 1 1 calc(100% - 40px); /* Одна колонка при ширине экрана меньше 768px */
+    }
 }
