--- a/frontend/templates/schedules/schedule_list.html
+++ b/frontend/templates/schedules/schedule_list.html
@@ -8,9 +8,9 @@
     {% if user.is_authenticated %}
         <a href="{% url 'schedules:schedule_create' %}" class="button">Добавить график</a>
     {% endif %}
-    <ul>
+    <div class="schedule-list">
         {% for schedule in schedules %}
-            <li>
+            <div class="schedule-item">
                 <h2>{{ schedule.title }}</h2>
                 <p>{{ schedule.description }}</p>
                 <p>Автор: {{ schedule.author.first_name }} {{ schedule.author.last_name }}.
@@ -23,7 +23,8 @@
                     <a href="{% url 'schedules:schedule_delete' pk=schedule.pk %}"
                        type="submit" class="button delete">Удалить график</a>
                 {% endif %}
-            </li>
+            </div>
         {% endfor %}
-    </ul>
+    </div>
 {% endblock %}
+
