--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -152,3 +152,33 @@ th {
         flex: 1 1 calc(100% - 40px); /* Одна колонка при ширине экрана меньше 768px */
     }
 }
+
+/* Контейнеры для страниц с графиками */
+.schedule-detail-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Расстояние между блоками */
+}
+
+.schedule-detail-item {
+    background: rgba(255, 255, 255, 0.8); /* Прозрачный фон для контейнера */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Тень для контейнера */
+    box-sizing: border-box; /* Учитываем padding и border в ширине и высоте элемента */
+}
+
+.schedule-create-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; /* Расстояние между блоками */
+}
+
+.schedule-create-item {
+    background: rgba(255, 255, 255, 0.8); /* Прозрачный фон для контейнера */
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Тень для контейнера */
+    box-sizing: border-box; /* Учитываем padding и border в ширине и высоте элемента */
+    max-width: 700px;  /* Максимальная ширина контейнера */
+}
