--- a/frontend/templates/schedules/schedule_detail.html
+++ b/frontend/templates/schedules/schedule_detail.html
@@ -4,81 +4,88 @@
 
 {% block content %}
     <h2>{{ schedule.title }}</h2>
-    <p>{{ schedule.description }}</p>
-    <p>Автор: {{ schedule.author.first_name }} {{ schedule.author.last_name }}.
-       Последние изменения: {{ schedule.last_modified|date:"d.m.Y" }}</p>
+    <div class="schedule-detail-container">
+        <div class="schedule-detail-item">
+            <p>Описание: {{ schedule.description }}</p>
+            <p>Автор: {{ schedule.author.first_name }} {{ schedule.author.last_name }}.
+            Последние изменения: {{ schedule.last_modified|date:"d.m.Y" }}</p>
+        </div>
 
-    <h3>Перечень работ</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>№ п/п</th>
-                <th>Вид работ</th>
-                <th>Дата начала</th>
-                <th>Дата окончания</th>
-                {% if user.is_authenticated and user == schedule.author %}
-                <th>Действия</th>
-                {% endif %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for work in schedule.works.all %}
-                <tr>
-                    <td>{{ forloop.counter }}</td>
-                    <td>{{ work.name }}</td>
-                    <td>{{ work.start_date }}</td>
-                    <td>{{ work.end_date }}</td>
-                    {% if user.is_authenticated and user == schedule.author %}
-                    <td>
-                        <a href="{% url 'schedules:work_update' pk=work.pk %}"
-                           class="button">Редактировать</a>
-                        <a href="{% url 'schedules:work_delete' pk=work.pk %}"
-                           class="button delete">Удалить</a>
-                    </td>
-                    {% endif %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <h3>Перечень ресурсов</h3>
-    <table>
-        <thead>
-            <tr>
-                <th>№ п/п</th>
-                <th>Наименование ресурса</th>
-                <th>Количество</th>
-                <th>Единицы измерения</th>
-                {% if user.is_authenticated and user == schedule.author %}
-                <th>Действия</th>
-                {% endif %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for work in schedule.works.all %}
-                {% for resource in work.resources.all %}
+
+        <div class="schedule-detail-item">
+            <h3>Перечень работ</h3>
+            <table>
+                <thead>
                     <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ resource.name }}</td>
-                        <td>{{ resource.quantity }}</td>
-                        <td>{{ resource.unit }}</td>
+                        <th>№ п/п</th>
+                        <th>Вид работ</th>
+                        <th>Дата начала</th>
+                        <th>Дата окончания</th>
                         {% if user.is_authenticated and user == schedule.author %}
-                        <td>
-                            <a href="{% url 'schedules:resource_update' pk=resource.pk %}"
-                               class="button">Редактировать</a>
-                            <a href="{% url 'schedules:resource_delete' pk=resource.pk %}"
-                               class="button delete">Удалить</a>
-                        </td>
+                        <th>Действия</th>
                         {% endif %}
                     </tr>
-                {% endfor %}
-            {% endfor %}
-        </tbody>
-    </table>
+                </thead>
+                <tbody>
+                    {% for work in schedule.works.all %}
+                        <tr>
+                            <td>{{ forloop.counter }}</td>
+                            <td>{{ work.name }}</td>
+                            <td>{{ work.start_date }}</td>
+                            <td>{{ work.end_date }}</td>
+                            {% if user.is_authenticated and user == schedule.author %}
+                            <td>
+                                <a href="{% url 'schedules:work_update' pk=work.pk %}" class="button">Редактировать</a>
+                                <a href="{% url 'schedules:work_delete' pk=work.pk %}" class="button delete">Удалить</a>
+                            </td>
+                            {% endif %}
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
 
-    {% if user == schedule.author %}
-        <a href="{% url 'schedules:schedule_update' pk=schedule.pk %}"
-           class="button">Редактировать график</a>
-        <a href="{% url 'schedules:schedule_delete' pk=schedule.pk %}"
-           class="button delete">Удалить график</a>
-    {% endif %}
+        <div class="schedule-detail-item">
+            <h3>Перечень ресурсов</h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>№ п/п</th>
+                        <th>Наименование ресурса</th>
+                        <th>Количество</th>
+                        <th>Единицы измерения</th>
+                        {% if user.is_authenticated and user == schedule.author %}
+                        <th>Действия</th>
+                        {% endif %}
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for work in schedule.works.all %}
+                        {% for resource in work.resources.all %}
+                            <tr>
+                                <td>{{ forloop.counter }}</td>
+                                <td>{{ resource.name }}</td>
+                                <td>{{ resource.quantity }}</td>
+                                <td>{{ resource.unit }}</td>
+                                {% if user.is_authenticated and user == schedule.author %}
+                                <td>
+                                    <a href="{% url 'schedules:resource_update' pk=resource.pk %}" class="button">Редактировать</a>
+                                    <a href="{% url 'schedules:resource_delete' pk=resource.pk %}" class="button delete">Удалить</a>
+                                </td>
+                                {% endif %}
+                            </tr>
+                        {% endfor %}
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+
+
+        {% if user == schedule.author %}
+        <div class="schedule-detail-item">
+            <a href="{% url 'schedules:schedule_update' pk=schedule.pk %}" class="button">Редактировать график</a>
+            <a href="{% url 'schedules:schedule_delete' pk=schedule.pk %}" class="button delete">Удалить график</a>
+        </div>
+        {% endif %}
+    </div>
 {% endblock %}
