--- a/frontend/templates/schedules/schedule_update.html
+++ b/frontend/templates/schedules/schedule_update.html
@@ -4,16 +4,23 @@
 
 {% block content %}
     <h2>Редактировать график</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="button delete">Сохранить</button>
-        <a href="{% url 'schedules:schedule_detail' pk=form.instance.pk %}"
-           class="button">Вернуться к графику</a>
-        <a href="{% url 'schedules:schedule_list' %}" class="button">К списку графиков</a>
-    </form>
-    <form method="post" action="{% url 'schedules:work_create' schedule_pk=form.instance.pk %}">
-        {% csrf_token %}
-        <button type="submit" class="button">Добавить работу</button>
-    </form>
+    <div class="schedule-create-container">
+        <div class="schedule-create-item">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="button delete">Сохранить</button>
+                <a href="{% url 'schedules:schedule_detail' pk=form.instance.pk %}" class="button">
+                    Вернуться к графику</a>
+                <a href="{% url 'schedules:schedule_list' %}" class="button">
+                    К списку графиков</a>
+            </form>
+        </div>
+        <div class="schedule-create-item">
+            <form method="post" action="{% url 'schedules:work_create' schedule_pk=form.instance.pk %}">
+                {% csrf_token %}
+                <button type="submit" class="button">Добавить работу</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
