--- a/frontend/templates/schedules/work_create.html
+++ b/frontend/templates/schedules/work_create.html
@@ -4,10 +4,15 @@
 
 {% block content %}
     <h2>Добавить работу</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="button delete">Сохранить</button>
-        <a href="{% url 'schedules:schedule_detail' pk=schedule_pk %}" class="button">Отмена</a>
-    </form>
+    <div class="schedule-create-container">
+        <div class="schedule-create-item">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="button delete">Сохранить</button>
+                <a href="{% url 'schedules:schedule_detail' pk=schedule_pk %}"
+                   class="button">Отмена</a>
+            </form>
+        </div>
+    </div>
 {% endblock %}
