--- a/frontend/templates/schedules/work_update.html
+++ b/frontend/templates/schedules/work_update.html
@@ -4,25 +4,31 @@
 
 {% block content %}
     <h2>Редактировать работу</h2>
-    <form method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="{{ form.name.id_for_label }}">Вид работ</label>
-            {{ form.name }}
+    <div class="schedule-create-container">
+        <div class="schedule-create-item">
+
+            <form method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="{{ form.name.id_for_label }}">Вид работ</label>
+                    {{ form.name }}
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.start_date.id_for_label }}">Дата начала</label>
+                    {{ form.start_date }}
+                    <input type="date" id="id_start_date_picker">
+                </div>
+                <div class="form-group">
+                    <label for="{{ form.end_date.id_for_label }}">Дата окончания</label>
+                    {{ form.end_date }}
+                    <input type="date" id="id_end_date_picker">
+                </div>
+                <button type="submit" class="button delete">Сохранить</button>
+                <a href="{% url 'schedules:schedule_detail' pk=schedule_pk %}"
+                   class="button">Отмена</a>
+            </form>
         </div>
-        <div class="form-group">
-            <label for="{{ form.start_date.id_for_label }}">Дата начала</label>
-            {{ form.start_date }}
-            <input type="date" id="id_start_date_picker">
-        </div>
-        <div class="form-group">
-            <label for="{{ form.end_date.id_for_label }}">Дата окончания</label>
-            {{ form.end_date }}
-            <input type="date" id="id_end_date_picker">
-        </div>
-        <button type="submit" class="button delete">Сохранить</button>
-        <a href="{% url 'schedules:schedule_detail' pk=schedule_pk %}" class="button">Отмена</a>
-    </form>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
