--- a/frontend/templates/includes/footer.html
+++ b/frontend/templates/includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p>Copyright &copy; {{ year }} <span style="color:#DCDCDC"> «Планирование работ»</span></p>
+    <p> &copy; {{ year }} <span style="color: #2F4F4F"> «Планирование работ»</span></p>
 </footer>
