--- a/frontend/templates/users/profile.html
+++ b/frontend/templates/users/profile.html
@@ -4,9 +4,14 @@
 
 {% block content %}
     <h2>Профиль</h2>
-    <p>Пользователь: {{ user.username }}</p>
-    <p>Имя: {{ user.first_name }}</p>
-    <p>Фамилия: {{ user.last_name }}</p>
-    <p>Адрес эл.почты {{ user.email }}</p>
-    <a href="{% url 'edit_profile' %}" class="button">Изменить профиль</a>
+    <div class="profile-container">
+        <div class="profile-item">
+            <p>Пользователь: {{ user.username }}</p>
+            <p>Имя: {{ user.first_name }}</p>
+            <p>Фамилия: {{ user.last_name }}</p>
+            <p>Адрес эл.почты {{ user.email }}</p>
+            <a href="{% url 'edit_profile' %}" class="button">
+                Изменить профиль</a>
+        </div>
+    </div>
 {% endblock %}
