--- a/frontend/templates/users/signup.html
+++ b/frontend/templates/users/signup.html
@@ -3,10 +3,14 @@
 {% block title %}Регистрация{% endblock %}
 
 {% block content %}
-    <h2>Регистрация</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="button">Зарегистрироваться</button>
-    </form>
+    <h2>Регистрация пользователя</h2>
+    <div class="profile-container">
+        <div class="profile-item">
+            <form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit" class="button">Зарегистрироваться</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
